# framework.uifw.xorg.lib.libxtst

./: Makefile.am  configure.ac  xtst.pc.in
debian/: changelog  control  libxtst-dev.install  rules
include/X11/extensions/: XTest.h
packaging/: libXtst.spec  libxtst.spec
src/: Makefile.am  XTest.c
